--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -26,4 +26,4 @@ COPY . .
 EXPOSE 8000
 
 # Run the FastAPI app using uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
