--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = fibonacci-project
+name = code-repair-with-llms
 version = 0.1.0
-description = A simple Fibonacci calculator
+description = A web application to resolve security vulnerabilities
 author = Your Name
 author_email = your.email@example.com
 
@@ -33,10 +33,12 @@ warn_redundant_casts = True
 disallow_untyped_defs = False
 
 [tool:pytest]
-testpaths = tests
+testpaths = backend/tests
 python_files = test_*.py
 python_classes = Test
 python_functions = test_*
+addopts = -v -ra -q
+pythonpath = .
 
 [flake8]
 max-line-length = 88
@@ -44,5 +46,5 @@ extend-ignore = E203
 exclude = .git,__pycache__,build,dist
 
 [coverage:run]
-source = app
-omit = tests/*
+source = backend
+omit = backend/tests/*
