changed test directory in yaml file and setup config file

--- a/.github/workflows/code-repair-app.yml
+++ b/.github/workflows/code-repair-app.yml
@@ -42,4 +42,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest tests/  # Run tests specifically from the "tests" directory
+        pytest backend/tests/  # Run tests specifically from the "tests" directory
